Fix CodeMirror height and settings mobile dots position
- Adjust CodeMirror height offset to 200px for alert space
- Force vertical dots menu to top-right corner on mobile
- Prevent horizontal scroll on settings page

--- a/src/stylus/view-editor.styl
+++ b/src/stylus/view-editor.styl
@@ -34,4 +34,4 @@
     padding 5px 15px
 
   .CodeMirror
-    height calc(100vh - 180px)
+    height calc(100vh - 200px)
